# remove-empty-ns-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Tiltfile  index.yaml  kustomization.yaml  licence  mise.toml  pyproject.toml  remove-empty-ns-operator-1.0.0.tgz  remove-empty-ns-operator-1.1.0.tgz  settings.yaml
helm/: Chart.yaml  values.schema.json  values.yaml
helm/templates/: cm.yaml  deployment.yaml  rbac.yaml
manifests/: deployment.yaml  namespace.yaml  rbac.yaml
src/: app.py  remove-empty-ns-operator.py  requirements.txt
tests/: tests.py
