[tool.poetry]
name = "remove-empty-ns-operator"
version = "1.1.1"
description = "Remove empty namespaces operator"
authors = ["Roman Geraskin"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kopf = "^1.35.5"
kubernetes = "^32.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
